--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -81,9 +81,6 @@
     }
     .advantages {
         padding: 50px 30px;
-        .title-black {
-            font-size: 25px;
-        }
         &__block {
             width: 200px;
         }
@@ -92,6 +89,21 @@
         }
         &__wrapper {
             margin-top: 40px;
+        }
+    }
+    .title-black {
+        font-size: 25px;
+        &_white {
+            font-size: 26px;
+        }
+    }
+    .consultation {
+        padding: 60px 0 50px 0;
+        &__descr {
+            margin-top: 40px;
+        }
+        .container {
+            max-width: 680px;
         }
     }
 }
@@ -163,6 +175,31 @@
         }
         &__wrapper {
             margin-top: 30px;
+        }
+    }
+    .title-black {
+        &_white {
+            font-size: 20px;
+        }
+    }
+    .consultation {
+        padding: 40px 0 20px 0;
+        &__descr {
+            margin-top: 30px;
+            font-size: 16px;
+        }
+        .container {
+            max-width: 500px;
+        }
+    }
+    .feed-form {
+        width: 250px;
+        input {
+            height: 40px;
+        }
+        .button_submit {
+            height: 40px;
+            font-size: 14px;
         }
     }
 }
@@ -239,6 +276,34 @@
         &__descr {
             font-size: 11px;
             margin-top: 15px;
+            font-weight: 400;
+        }
+    }
+    .title-black {
+        &_white {
+            font-size: 16px;
+        }
+    }
+    .consultation {
+        padding: 25px 0 20px 0;
+        &__descr {
+            margin-top: 20px;
+            font-size: 11px;
+        }
+        .container {
+            max-width: 280px;
+        }
+    }
+    .feed-form {
+        margin-top: 25px;
+        width: 160px;
+        input {
+            height: 30px;
+            font-size: 10px;
+        }
+        .button_submit {
+            height: 30px;
+            font-size: 10px;
         }
     }
 }
