--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -14,6 +14,17 @@
             font-size: 14px;
         }
     }
+    .container {
+            width: 880px;
+        }
+    .carousel {
+        .prev {
+            left: -20px;
+        }
+        .next {
+            right: -20px;
+        }
+    }
 }
 
 @media screen and (max-width: 991px) {
@@ -104,6 +115,38 @@
         }
         .container {
             max-width: 680px;
+        }
+    }
+    .carousel {
+        .container {
+            position: relative;
+        }
+        .tns-item {
+            img {
+                width: 630px;
+            }
+        }
+        .prev, .next {
+            display: none;
+        }
+        .tns-nav {
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
+            top: -10%;
+            button {
+                width: 30px;
+                height: 5px;
+                margin-right: 5px;
+                border: none;
+                border-radius: 2px;
+                background-color: #929DA3;
+                .tns-nav-active {
+                    background-color: #ECC383;
+                }
+                
+            }
+
         }
     }
 }
