--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -19,4 +19,11 @@
         height: 55px;
         font-size: 16px;
     }
+    &_buy {
+        width: 131px;
+        height: 40px;
+        background-color: $main_color;
+        font-family: "Museo Sans Cyrl 500";
+        font-size: 14px;
+    }
 }
