--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,5 @@
 @import "base/variables";
+@import "base/mixins";
 * {
     font-family: "Museo Sans Cyrl", sans-serif;
 }
@@ -13,4 +14,7 @@
 @import "blocks/title-black";
 @import "blocks/consultation";
 @import "blocks/forms";
+@import "blocks/carousel";
+@import "blocks/catalog";
+@import "blocks/_catalog-item";
 @import "base/media";
