--- a/src/sass/blocks/_catalog-item.scss
+++ b/src/sass/blocks/_catalog-item.scss
@@ -6,6 +6,10 @@
     background-color: #ffffff;
     padding: 20px 20px 26px 20px;
     margin-bottom: 20px;
+    margin-right: 20px;
+    &:nth-child(3n) {
+        margin-right: 0;
+    }
     &__img {
         max-width: 100%;
         height: 200px;
