--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -16,5 +16,5 @@
 @import "blocks/forms";
 @import "blocks/carousel";
 @import "blocks/catalog";
-@import "blocks/_catalog-item";
+@import "blocks/catalog-item";
 @import "base/media";
