--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -174,6 +174,19 @@
             width: 330px;
             margin-right: 0;
         }
+        padding-bottom: 40px;
+    }
+    .feedback {
+        &-item {
+            justify-content: space-around;
+            margin-bottom: 60px;
+            img {
+                margin-right: 0;
+            }
+            &__text {
+                width: 420px;
+            }
+        }
     }
 }
 
@@ -310,6 +323,29 @@
             }
         }
         
+    }
+    .feedback {
+        &__block {
+            margin-top: 35px;
+        }
+        &-item {
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 50px;
+            img {
+                margin-right: 0;
+                height: 140px;
+            }
+            &__text {
+                width: 370px;
+            }
+            &__title {
+                font-size: 16px;
+            }
+            &__descr {
+                font-size: 14px;
+            }
+        }
     }
 }
 
@@ -463,6 +499,22 @@
         }
         &__content {
             margin-top: 0;
+        }
+    }
+    .feedback {
+        &__block {
+            margin-top: 35px;
+        }
+        &-item {
+            flex-direction: column;
+            img {
+                height: 130px;
+            }
+            &__text {
+                width: 300px;
+                text-align: center;
+                margin-top: 20px;
+            }
         }
     }
 }
