--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -17,4 +17,5 @@
 @import "blocks/carousel";
 @import "blocks/catalog";
 @import "blocks/catalog-item";
+@import "blocks/feedback";
 @import "base/media";
