--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -18,4 +18,6 @@
 @import "blocks/catalog";
 @import "blocks/catalog-item";
 @import "blocks/feedback";
+@import "blocks/footer";
+@import "blocks/modal";
 @import "base/media";
