--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -8,6 +8,9 @@
     font-weight: 500;
     text-transform: uppercase;
     border: none;
+    &:hover {
+        box-shadow: 3px 3px 20px #ffffff8f
+    }
     &_main {
         margin-top: 67px;
         width: 300px;
@@ -25,5 +28,8 @@
         background-color: $main_color;
         font-family: "Museo Sans Cyrl 500";
         font-size: 14px;
+        &:hover {
+            box-shadow: 3px 3px 25px #940c07b2
+        }
     }
 }
