--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -347,6 +347,34 @@
             }
         }
     }
+    .overlay {
+        .modal {
+            min-height: 300px;
+            width: 300px;
+            padding: 20px;
+            &__subtitle {
+                font-size: 16px;
+            }
+            &__text {
+                font-size: 12px;
+            }
+            .feed-form_modal {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                .button_submit {
+                    margin-top: 10px;
+                } 
+                input {
+                    height: 30px;
+                    margin-bottom: 10px;
+                    padding: 0 14px;
+                    font-size: 10px;
+                    width: 200px;
+                }
+            }
+        }
+    }
 }
 
 @media screen and (max-width: 610px) {
@@ -514,6 +542,49 @@
                 width: 300px;
                 text-align: center;
                 margin-top: 20px;
+            }
+        }
+        padding-bottom: 0;
+    }
+    .footer {
+        &__info {
+            width: 100%;
+            padding: 30px 20px;
+            height: 220px;
+        }
+        &__address, &__phone {
+            font-size: 16px;
+            margin-bottom: 30px;
+        }
+    }
+    .overlay {
+        .modal {
+            min-height: 200px;
+            width: 250px;
+            padding: 10px;
+            &__subtitle {
+                font-size: 12px;
+            }
+            &__text {
+                font-size: 10px;
+            }
+            .feed-form_modal {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                width: 100%;
+                margin-top: 20px;
+                .button_submit {
+                    margin-top: 10px;
+                    width: 65%;
+                } 
+                input {
+                    height: 30px;
+                    margin-bottom: 10px;
+                    padding: 0 14px;
+                    font-size: 10px;
+                    width: 200px;
+                }
             }
         }
     }
