--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,5 +1,6 @@
 @import "base/variables";
 @import "base/mixins";
+@import "base/animations";
 * {
     font-family: "Museo Sans Cyrl", sans-serif;
 }
@@ -20,4 +21,5 @@
 @import "blocks/feedback";
 @import "blocks/footer";
 @import "blocks/modal";
+@import "blocks/page-up";
 @import "base/media";
