--- a/src/sass/blocks/_catalog-item.scss
+++ b/src/sass/blocks/_catalog-item.scss
@@ -77,9 +77,8 @@
         width: calc(200% + 40px);
     }
     &__content {
-        width: 50%;
-        margin-right: 20px;
-        transform: translateX(-100%);
+        width: 100%;
+        transform: translateX(-110%);
         transition: 0.2s all;
         &_active {
             transform: translateX(0%);
@@ -87,14 +86,13 @@
     }
     &__list {
         position: relative;
-        width: 50%;
-        margin-left: 20px;
+        width: 100%;
+        margin-left: 40px;
         transform: translateX(0%);
         padding-left: 0;
-        padding-right: 20px;
+        padding-right: 0;
         transition: 0.2s all;
         margin-bottom: 0;
-        list-style-type: none;
         li {
             position: relative;
             color: #555555;
@@ -114,16 +112,15 @@
         }
         &_active {
             transform: translateX(-100%);
+            padding-right: 20px;
             margin-left: 0px;
-            padding-left: 0;
-            padding-right: 32px;
         }
     }
     &__back {
         position: absolute;
         bottom: 0;
         left: 50%;
-        transform: translateX(calc(-50% - 19px));
+        transform: translateX(calc(-50%));
         color: $main_color;
         font-family: "Museo Sans Cyrl 500";
         font-size: 14px;
@@ -136,5 +133,8 @@
         &:hover {
             color: $main_color;
         }
+    }
+    &__more {
+        list-style-type: none;
     }
 }
