--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -45,5 +45,9 @@
             }
         }
     }
-    
+    iframe {
+        width: 100%;
+        height: 630px;
+        border: none; 
+    }
 }
