--- a/src/sass/libs/_font.scss
+++ b/src/sass/libs/_font.scss
@@ -2,6 +2,7 @@
 
 @font-face {
 	font-family: 'Museo Sans Cyrl 500';
+	font-display: swap;
 	src: url('../fonts/MuseoSansCyrl-500.eot');
 	src: local('MuseoSansCyrl-500'),
 		url('../fonts/MuseoSansCyrl-500.eot?#iefix') format('embedded-opentype'),
@@ -13,6 +14,7 @@
 
 @font-face {
 	font-family: 'Museo Sans Cyrl 300';
+	font-display: swap;
 	src: url('../fonts/MuseoSansCyrl-300Italic.eot');
 	src: local('MuseoSansCyrl-300Italic'),
 		url('../fonts/MuseoSansCyrl-300Italic.eot?#iefix') format('embedded-opentype'),
@@ -24,6 +26,7 @@
 
 @font-face {
 	font-family: 'Museo Sans Cyrl 500';
+	font-display: swap;
 	src: url('../fonts/MuseoSansCyrl-500Italic.eot');
 	src: local('MuseoSansCyrl-500Italic'),
 		url('../fonts/MuseoSansCyrl-500Italic.eot?#iefix') format('embedded-opentype'),
@@ -35,6 +38,7 @@
 
 @font-face {
 	font-family: 'Museo Sans Cyrl 900';
+	font-display: swap;
 	src: url('../fonts/MuseoSansCyrl-900.eot');
 	src: local('MuseoSansCyrl-900'),
 		url('../fonts/MuseoSansCyrl-900.eot?#iefix') format('embedded-opentype'),
@@ -46,6 +50,7 @@
 
 @font-face {
 	font-family: 'Museo Sans Cyrl 700';
+	font-display: swap;
 	src: url('../fonts/MuseoSansCyrl-700.eot');
 	src: local('MuseoSansCyrl-700'),
 		url('../fonts/MuseoSansCyrl-700.eot?#iefix') format('embedded-opentype'),
@@ -57,6 +62,7 @@
 
 @font-face {
 	font-family: 'Museo Sans Cyrl 700';
+	font-display: swap;
 	src: url('../fonts/MuseoSansCyrl-700Italic.eot');
 	src: local('MuseoSansCyrl-700Italic'),
 		url('../fonts/MuseoSansCyrl-700Italic.eot?#iefix') format('embedded-opentype'),
@@ -68,6 +74,7 @@
 
 @font-face {
 	font-family: 'Museo Sans Cyrl 300';
+	font-display: swap;
 	src: url('../fonts/MuseoSansCyrl-300.eot');
 	src: local('MuseoSansCyrl-300'),
 		url('../fonts/MuseoSansCyrl-300.eot?#iefix') format('embedded-opentype'),
@@ -79,6 +86,7 @@
 
 @font-face {
 	font-family: 'Museo Sans Cyrl 100';
+	font-display: swap;
 	src: url('../fonts/MuseoSansCyrl-100.eot');
 	src: local('MuseoSansCyrl-100'),
 		url('../fonts/MuseoSansCyrl-100.eot?#iefix') format('embedded-opentype'),
@@ -90,6 +98,7 @@
 
 @font-face {
 	font-family: 'Museo Sans Cyrl 100';
+	font-display: swap;
 	src: url('../fonts/MuseoSansCyrl-100Italic.eot');
 	src: local('MuseoSansCyrl-100Italic'),
 		url('../fonts/MuseoSansCyrl-100Italic.eot?#iefix') format('embedded-opentype'),
@@ -101,6 +110,7 @@
 
 @font-face {
 	font-family: 'Museo Sans Cyrl 900';
+	font-display: swap;
 	src: url('../fonts/MuseoSansCyrl-900Italic.eot');
 	src: local('Museo Sans Cyrl 900 Italic'), local('MuseoSansCyrl-900Italic'),
 		url('../fonts/MuseoSansCyrl-900Italic.eot?#iefix') format('embedded-opentype'),
