--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,8 +1,15 @@
+@import "libs/bootstrap-reboot.min";
+@import "libs/font";
+@import "libs/slick";
+@import "libs/animate.min";
+@import "libs/tiny-slider";
+
 @import "base/variables";
 @import "base/mixins";
 @import "base/animations";
 * {
     font-family: "Museo Sans Cyrl", sans-serif;
+    font-display: swap;
 }
 .container {
     max-width: 940px;
